# intershot

./: .gitignore  CMakeLists.txt  README.txt
src/: main.cpp  screenshot.cpp  screenshot.h
